# linsky

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/controller/: app_controller.rs  connection_manager.rs  input_handler.rs  mod.rs
src/models/: account.rs  account_summary.rs  attachment.rs  email.rs  mod.rs
src/protocols/: imap.rs  mod.rs  pop3.rs  smtp.rs
src/state/: account_manager.rs  app_state.rs  email_manager.rs  mod.rs
src/storage/: mod.rs
src/ui/: app.rs  mod.rs
src/ui/renderer/: app_renderer.rs  mod.rs  view_renderer.rs
src/ui/views/: account_config.rs  mod.rs
src/ui/widgets/: mod.rs
